--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -1,5 +1,5 @@
-name: GitHub Actions Demo
-on: [push,pull_request]
+name: Build Program
+on: [pull_request]
 jobs:
   build:
     runs-on: ubuntu-latest
